上传播放界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:roundIcon="@drawable/icon_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MusicPlayerActivity"></activity>
+        <activity android:name=".ui.activity.MusicPlayerActivity"
+            />
         <activity android:name=".ui.activity.PlayListActivity" />
         <activity
             android:name=".ui.activity.LoginActivity"
