--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,7 @@ dependencies {
 
     implementation 'com.taishi-y:musicindicator:0.1.0'
 
+    implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
+
 
 }
