增加歌词界面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
 
 //    implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
     implementation 'com.github.warkiz.tickseekbar:tickseekbar:0.1.4'
-
+    //歌词
+    implementation 'com.github.zhengken:LyricViewDemo:v1.2'
 
 }
